Fix changelog so Jekins doesn't explode

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ubports-wallpapers (18.10-0ubports1) xenial; urgency=medium
+ubports-wallpapers (18.10) xenial; urgency=medium
 
   * Initial release
 
